--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
 					</div>
 					<div class="row">
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="34 Months" data-speed="5000" data-refresh-interval="50"></span>
-							<span class="colorlib-counter-label">Professional Experience</span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="34" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter-label">Professional Experience <br>(months)</br></span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
-							<span class="colorlib-counter js-counter" data-from="0" data-to="15+" data-speed="5000" data-refresh-interval="50"></span>
+							<span class="colorlib-counter js-counter" data-from="0" data-to="15" data-speed="5000" data-refresh-interval="50"></span>
 							<span class="colorlib-counter-label">Academic Projects & Papers</span>
 						</div>
 						<div class="col-md-3 text-center animate-box">
@@ -184,7 +184,18 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>HTML/CSS/JavaScript/React.js/Node.js</h3>
+								<h3>HTML/CSS/PHP</h3>
+								<div class="progress">
+								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="75"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
+								    <span>75%</span>
+								  	</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="progress-wrap">
+								<h3>JavaScript/React.js/Node.js</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="75"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
@@ -195,7 +206,18 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>UX & Design/Wireframing/RapidPrototyping/SketchApp/AdobeXD</h3>
+								<h3>UX & Design/Wireframing/RapidPrototyping</h3>
+								<div class="progress">
+								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
+								    <span>90%</span>
+								  	</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
+							<div class="progress-wrap">
+								<h3>SketchApp/AdobeXD</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -206,7 +228,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>Databases: SQL Server/MySQL/NoSQL/Oracle/MongoDB</h3>
+								<h3>SQL Server/MySQL/Oracle/MongoDB</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="80"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -261,22 +283,22 @@
 						</div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>Data Warehousing/Business Intelligence/Reporting & Analysis</h3>
+								<h3>Agile & Scrum Methodologies</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-9" role="progressbar" aria-valuenow="90"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-								    <span>90%</span>
+								 	<div class="progress-bar color-9" role="progressbar" aria-valuenow="95"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
+								    <span>95%</span>
 								  	</div>
 								</div>
 							</div>
 						</div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>Agile & Scrum Methodologies</h3>
+								<h3>Data Warehousing/Business Intelligence/Reporting & Analysis</h3>
 								<div class="progress">
-								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="95"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
-								    <span>95%</span>
+								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="90"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
+								    <span>90%</span>
 								  	</div>
 								</div>
 							</div>
@@ -315,8 +337,16 @@
 					               </div>
 
 					               <div class="timeline-label">
-					                  <h2><a href="#">AllinCall Research & Solutions</a> <span>Technical Blog Writer</span></h2>
-					                  <p>The company provides technology-backed AI/ML solutions.<br>I blog on latest technical topics (e.g. Data Science, Cloud Native, JavaScript Framework etc.).</p>
+					                  <h2><a href="#">Asst. Project Manager (Part-Time)</a> <span><br>Wipiway</br><br>May 2018 – Present</br></span></h2>
+							 <p>Communicate with clients to gather project knowledge.<br>Setup Stories on JIRA for developers.</br>Manage a team of developers and work in Agile environment as Scrum Master.<br>Handle Project Delivery.</br></p>
+					               </div>
+					               <div class="timeline-label">
+					                  <h2><a href="#">Asst. Manager - Reporting</a> <span><br>IDFC First Bank</br><br>November 2017 – April 2018</br></span></h2>
+							 <p>Extensively worked on automation of manual tasks and performance tuning of long-running processes.<br>Reduced the turnaround time of daily weekly reports by 30% by using dashboards & macros in MS Excel & Power BI.</br>Analyzed & tuned ETL mappings & SQL queries to reduce run time of daily jobs by 10%.<br>Developed SQL procedures to clean & manipulate 8,000,000 rows on MySQL.</br><br>Collaborated with business teams to understand their challenges & came up with efficient solutions to meet their requirements.</br></p>
+					               </div>
+					               <div class="timeline-label">
+					                  <h2><a href="#">Analyst</a> <span><br>KPMG in India</br><br>January 2016 - June 2017</br></span></h2>
+							 <p> Designed, developed, implemented, & supported QlikView & Tableau dashboards.<br>Integrated databases & built data models using Star & Snow Flake Schemas & resolved circular relational traps like fan trap, chasm trap, synthetic keys, & other modeling issues.</br>Performed performance tuning, Query optimization & database consistency checks on existing BI systems.<br>Developed SQL procedures to clean & manipulate 8,000,000 rows on MySQL.</br><br>Extensively participated in translating business needs into Business Intelligence reporting solutions.</br><br>Collaborated with business teams to understand their challenges & came up with efficient solutions to meet their requirements.</br></p>
 					               </div>
 					            </div>
 					         </article>
