--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					</ul>
 				</div>
                 <div class="colorlib-footer" id="rcorners2">
-                <h3><strong><a href="/Rohan_Resume_Resume.pdf"><i class="fa fa-download"></i> Download Resume</a></strong></h3>
+                <h3><strong><a href="/Rohan_Resume.pdf"><i class="fa fa-download"></i> Download Resume</a></strong></h3>
                 </div>
 </nav>
 		</aside>
@@ -80,7 +80,7 @@
                                         <hr>
                                         
                                         <p1>Graduate Student with over two years of professional experience in data warehousing, business intelligence and UI/UX Design seeking an opportunity with an innovative organization. Proven ability to understand user requirements and translate into actionable project plans.</p1>
-                                        <p2><br /><b><b>Adaptable. Resourceful. Inquisitive.</b></b></p2>
+                                        <p2><br><br><b>Adaptable. Resourceful. Inquisitive.</b></br></br></p2>
                           
 									</div>
 								</div>
@@ -148,19 +148,6 @@
 						</div>
 					</div>
 					<div class="row">
-						<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-						</div>
-						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<div class="progress-wrap">
-								<h3>Data Visualization:Tableau/Qlikview/MS Excel/PowerBI/Kibana</h3>
-								<div class="progress">
-								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="85"
-								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
-								    <span>85%</span>
-								  	</div>
-								</div>
-							</div>
-						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
 								<h3>Python/NumPy/Pandas/Django/Tesorflow/OpenCV</h3>
@@ -278,6 +265,18 @@
 								 	<div class="progress-bar color-9" role="progressbar" aria-valuenow="95"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
 								    <span>95%</span>
+								  	</div>
+								</div>
+							</div>
+						</div>
+			<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
+						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
+							<div class="progress-wrap">
+								<h3>Data Visualization:Tableau/Qlikview/MS Excel/PowerBI/Kibana</h3>
+								<div class="progress">
+								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="85"
+								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
+								    <span>85%</span>
 								  	</div>
 								</div>
 							</div>
