--- a/android-dev/android.html
+++ b/android-dev/android.html
@@ -78,7 +78,7 @@
                                         <hr>
                                         <h4><strong>Insta Manipal</strong><br><i>Manipal University (08/2012 – 03/2013)</i></br></h4>
                                        <strong> <li>Developed an IOS and Android based App for College Extracurricular Activities and Events, with 4 other team members.</li> <li>Single handedly implemented the UI Design.</li> <li>4000+ Downloads on the Play store.</li><br>
-                                           <img src="images/website%20page.png">App
+                                           <img src="images/website%20page.png">
                                            <img src="images/main%20activity.png">
                                         <br><br>
                                            <h6><a href="https://apkpure.com/insta-manipal/com.softsal.mipsuminsta" style="color: black"></a></h6><br>
