--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
 							</div>
 							<div class="row">
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-									<a href="cp/cp.html" target="_blank"><div class="services color-1">
+									<a href="cp/c.html" target="_blank"><div class="services color-1">
 										<span class="icon2"><i class="icon-bulb"></i></span>
 										<h3>Data Analytics</h3>
 									</div>
 								</a></div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-									<a href="web-dev/webdev.html" target="_blank"><div class="services color-2">
+									<a href="web-dev/webdv.html" target="_blank"><div class="services color-2">
 										<span class="icon2"><i class="fa fa-code"></i></span>
 										<h3>Design</h3>
 									</div>
@@ -105,7 +105,7 @@
 									</div>
 								</a></div>
                                 <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-									<a href="content_writing/content.html" target="_blank"><div class="services color-3">
+									<a href="content_witing/content.html" target="_blank"><div class="services color-3">
 										<span class="icon2"><i class="icon-pen"></i></span>
 										<h3>Academic Papers</h3>
                                         </div>
