--- a/index.html
+++ b/index.html
@@ -48,11 +48,12 @@
 				<div class="author-img" style="background-image: url(images/PicsArt_03-06-08.16.36.png);"></div>
 				<h1 id="colorlib-logo"><a href="https://rohandash06.github.io">Rohan Das</a></h1>
 				<p><strong>Graduate Student at The University of North Carolina at Charlotte</strong></p>
+				<p><br>IT Developer</br><p>
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
 					<ul>
-						<li><a href="#" data-nav-section="about">About</a></li>
+						<li><a href="#" data-nav-section="about">About me</a></li>
 						<li><a href="#" data-nav-section="skills">Skills</a></li>
 						<li><a href="#" data-nav-section="experience">Experience</a></li>
 						<li><a href="#" data-nav-section="contact">Contact</a></li><br>
@@ -76,7 +77,7 @@
 							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="col-md-12">
 									<div class="about-desc">
-										<h2>About Me</h2>
+										<h2>Who Am I ?</h2>
                                         <hr>
                                         
                                         <p1>Graduate Student with over two years of professional experience in data warehousing, business intelligence and UI/UX Design seeking an opportunity with an innovative organization. Proven ability to understand user requirements and translate into actionable project plans.</p1>
@@ -150,7 +151,7 @@
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>Python/NumPy/Pandas/Django/Tesorflow/OpenCV</h3>
+								<h3>HTML/CSS/PHP</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="75"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
@@ -161,7 +162,7 @@
 						</div>
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>HTML/CSS/PHP</h3>
+								<h3>Python/NumPy/Pandas/Django/Tesorflow/OpenCV</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="75"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:75%">
@@ -359,7 +360,7 @@
 						<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 							<h2>Contact</h2>
                             <hr>
-                            <p>If you would like to get in touch with me, please send me an email at <strong>rohan.dash0604@gmail.com</strong></p>
+                            <p>To get in touch with me, please send me an email at <strong>rohan.dash0604@gmail.com</strong></p>
                          
 						</div>
 					</div>
