--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 			<div class="text-center">
 				<div class="author-img" style="background-image: url(images/PicsArt_03-06-08.16.36.png);"></div>
 				<h1 id="colorlib-logo"><a href="https://rohandash06.github.io">Rohan Das</a></h1>
-				<p><strong>Graduate Student at The University of North Carolina at Charlotte</strong></p>
-				<p><br>IT Developer</br><p>
+				<p><strong>Graduate Student at The University of North Carolina at Charlotte</strong><br>IT Developer</br></p>
+				
 			</div>
 			<nav id="colorlib-main-menu" role="navigation" class="navbar">
 				<div id="navbar" class="collapse">
@@ -96,7 +96,7 @@
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 									<a href="web-dev/webdv.html" target="_blank"><div class="services color-2">
 										<span class="icon2"><i class="fa fa-code"></i></span>
-										<h3>Design</h3>
+										<h3>Web<br> Designing</h3>
 									</div>
 								</a></div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
