--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                                         <hr>
                                         
                                         <p1>Graduate Student with over two years of professional experience in data warehousing, business intelligence and UI/UX Design seeking an opportunity with an innovative organization. Proven ability to understand user requirements and translate into actionable project plans.</p1>
-                                        <p2><br><br><b>Adaptable. Resourceful. Inquisitive.</b></br></br></p2>
+                                        <p2><br><br><b><center>Adaptable. Resourceful. Inquisitive.</center></b></br></br></p2>
                           
 									</div>
 								</div>
