--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 			<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
 							<div class="progress-wrap">
-								<h3>Data Visualization:Tableau/Qlikview/MS Excel/PowerBI/Kibana</h3>
+								<h3>Data Visualization:Tableau/Qlikview/MS Excel/PowerBI</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="85"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -295,7 +295,7 @@
 						</div>
                         <div class="col-md-6 animate-box" data-animate-effect="fadeInRight">
 							<div class="progress-wrap">
-								<h3>Knowledge of Applied Mathematics, Statistics & Econometrics</h3>
+								<h3>Knowledge of Statistics & Econometrics</h3>
 								<div class="progress">
 								 	<div class="progress-bar color-1" role="progressbar" aria-valuenow="60"
 								  	aria-valuemin="0" aria-valuemax="100" style="width:60%">
@@ -328,15 +328,63 @@
 
 					               <div class="timeline-label">
 					                  <h2><a href="#">Asst. Project Manager (Part-Time)</a> <span><br>Wipiway</br><br>May 2018 – Present</br></span></h2>
-							 <p>Communicate with clients to gather project knowledge.<br>Setup Stories on JIRA for developers.</br>Manage a team of developers and work in Agile environment as Scrum Master.<br>Handle Project Delivery.</br></p>
+							 <p>               
+							  <ul>
+								   <li>
+									Communicate with clients to gather project knowledge.
+								   </li>
+								   <li>
+                    							Setup Stories on JIRA for developers.
+                						   </li>
+               
+                						    <li>
+                    							Manage a team of developers and work in Agile environment as Scrum Master.
+               							    </li>
+                						     <li>
+                   							 Handle Project Delivery.
+                						     </li>
+           						 </ul>
+							 </p>
 					               </div>
 					               <div class="timeline-label">
 					                  <h2><a href="#">Asst. Manager - Reporting</a> <span><br>IDFC First Bank</br><br>November 2017 – April 2018</br></span></h2>
-							 <p>Extensively worked on automation of manual tasks and performance tuning of long-running processes.<br>Reduced the turnaround time of daily weekly reports by 30% by using dashboards and macros in MS Excel & Power BI.</br>Analyzed & tuned ETL mappings & SQL queries to reduce run time of daily jobs by 10%.</br>Developed SQL procedures to clean & manipulate 8,000,000 rows on MySQL.</br>Collaborated with business teams to understand their challenges & came up with efficient solutions to meet their requirements.</br></p>
+							 <p><ul>
+                <li>
+                    Extensively worked on automation of manual tasks and performance tuning of long-running processes.
+                </li>
+                <li>
+                    Reduced the turnaround time of daily weekly reports by 30% by using dashboards & macros in MS Excel & Power BI.
+                </li>
+                <li>
+                    Analyzed & tuned ETL mappings & SQL queries to reduce run time of daily jobs by 10%.
+                </li>
+                <li>
+                    Developed SQL procedures to clean & manipulate 8,000,000 rows on MySQL.
+                </li>
+                <li>
+                    Collaborated with business teams to understand their challenges & came up with efficient solutions to meet their requirements.
+                </li>
+            </ul></p>
 					               </div>
 					               <div class="timeline-label">
 					                  <h2><a href="#">Analyst</a> <span><br>KPMG in India</br><br>January 2016 - June 2017</br></span></h2>
-							 <p>Designed, developed, implemented, & supported QlikView & Tableau dashboards.<br>Integrated databases & built data models using Star & Snow Flake Schemas and resolved circular relational traps like fan trap, chasm trap, synthetic keys, and other modeling issues.</br>Performed performance tuning, Query optimization & database consistency checks on existing BI systems.<br>Developed SQL procedures to clean & manipulate 8,000,000 rows on MySQL.</br>Extensively participated in translating business needs into Business Intelligence reporting solutions.</br>Collaborated with business teams to understand their challenges & came up with efficient solutions to meet their requirements.</br></p>
+							 <p>               <ul>
+                <li>
+                    Designed, developed, implemented, & supported QlikView & Tableau dashboards.
+                </li>
+                <li>
+                    Integrated databases & built data models using Star & Snow Flake Schemas & resolved circular relational traps like fan trap, chasm trap, synthetic keys, & other modeling issues.
+                </li>
+                <li>
+                    Performed performance tuning, Query optimization & database consistency checks on existing BI systems.
+                </li>
+                <li>
+                    Extensively participated in translating business needs into Business Intelligence reporting solutions.
+                </li>
+                <li>
+                    Collaborated with business teams to understand their challenges & came up with efficient solutions to meet their requirements.
+                </li>
+            </ul></p>
 					               </div>
 					            </div>
 					         </article>
