--- a/android-dev/android.html
+++ b/android-dev/android.html
@@ -83,6 +83,14 @@
                                         <br><br>
                                            <h6><a href="https://apkpure.com/insta-manipal/com.softsal.mipsuminsta" style="color: black"></a></h6><br>
                                         
+					    <hr>
+                                                                                   <h4><strong>SOUS CHEF</strong><br><i>UNC Charlotte (08/2018 – 12/2018)</i></br></h4>
+                                                                                  <strong> <li>Developed a prototype co-creative mobile application to assist in cooking.</li> <li>Under took various needfinding steps</li> <li>Created Personas and defined Use Cases</li>
+                                                                                  	<li>Drew Sketches and Wireframes</li> <li>Conducted User Studies</li><br>
+                                                                                      <img src="images/website%20page.png">
+                                                                                      <img src="images/main%20activity.png">
+                                                                                   <br><br>
+                                                                                      <h6><a href="https://apkpure.com/insta-manipal/com.softsal.mipsuminsta" style="color: black"></a></h6><br>
 									</div>
 								</div>
 							</div>
