--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
 										<h3>Data<br>Analytics</h3>
 									</div>
 								</a></div>
-								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-									<a href="web-dev/webdv.html" target="_blank"><div class="services color-2">
-										<span class="icon2"><i class="fa fa-code"></i></span>
-										<h3><br> Designing</h3>
+ 									<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
+									<a href="opensource/opensource.html" target="_blank"><div class="services color-1">
+										<span class="icon2"><i class="icon-world"></i></span>
+										<h3><br>Designing</h3>
 									</div>
 								</a></div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
