--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							</div>
 							<div class="row">
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-									<a href="cp/c.html" target="_blank"><div class="services color-1">
+									<a href="cp/cp.html" target="_blank"><div class="services color-1">
 										<span class="icon2"><i class="icon-bulb"></i></span>
 										<h3>Data<br>Analytics</h3>
 									</div>
