--- a/cp/cp.html
+++ b/cp/cp.html
@@ -104,12 +104,12 @@
                                                                                   <strong> <li>Completed the analysis of what sorts of people were likely to survive. 
 											  In particular, applied the tools of machine learning to predict which passengers survived the tragedy.</li>
 											  <li>Concept Used: Binary Classfication</li>
-											  <li>Model Accuracy: 0.89</li><br>
+											  <li>Model Accuracy: 87.32</li><br>
                                                                                       <img src="images/Kaggle.PNG"
 											   style= "width: 453px;
 											   height: 543px;">
                                                                                    <br><br>
-                                                                                      <h6><a href="https://www.kaggle.com/c/titanic" style="color: black"></a></h6><br>
+                                                                                      <h6><a href="https://github.com/rohandash06/Titanic-Machine-Learning-from-Disaster" style="color: black"></a></h6><br>
 											  <hr><br></br>
 									</div>				
 									
