--- a/cp/cp.html
+++ b/cp/cp.html
@@ -88,7 +88,7 @@
 											   style= "width: 733px;
 											   height: 578px;">
                                                                                    <br><br>
-                                                                                      <h6><a href="https://public.tableau.com/profile/rohan.das#!/vizhome/FINALPRESENTATIONMONDAYFINAL/DATASOURCES" style="color: black"></a></h6>
+                                                                                      <h6><a href="https://public.tableau.com/profile/rohan.das#!/vizhome/FINALPRESENTATIONMONDAYFINAL/DATASOURCES" style="color: black"><strong>View Project</strong></a></h6>
 											  <hr><br></br>
                                         							
                                        					 <h6><strong>Titanic: Machine Learning from Disaster</strong><br><i>Kaggle (04/2018 – 4/2018)</i></br></h6>
@@ -100,7 +100,7 @@
 											   style= "width: 807px;
 											   height: 534px;">
                                                                                    <br><br>
-                                                                                      <h6><a href="https://github.com/rohandash06/Titanic-Machine-Learning-from-Disaster" style="color: black"></a></h6><br>
+                                                                                      <h6><a href="https://github.com/rohandash06/Titanic-Machine-Learning-from-Disaster" style="color: black"><strong>View Project</strong></a></h6><br>
 											  <hr><br></br>
 								
 								<h2>Competitive Programming Profiles</h2>
