--- a/android-dev/android.html
+++ b/android-dev/android.html
@@ -81,7 +81,7 @@
                                            <img src="images/website%20page.png">
                                            <img src="images/main%20activity.png">
                                         <br><br>
-                                           <h6><a href="https://apkpure.com/insta-manipal/com.softsal.mipsuminsta" style="color: black"></a></h6><br>
+                                           <h6><a href="https://apkpure.com/insta-manipal/com.softsal.mipsuminsta" style="color: black"><strong>View Project</strong></a></h6><br>
                                         
 					    <hr>
                                                                                    <h4><strong>SOUS CHEF</strong><br><i>UNC Charlotte (08/2018 – 12/2018)</i></br></h4>
@@ -94,7 +94,7 @@
 											  style= "width: 253px;
 											   height: 543px;">
                                                                                    <br><br>
-                                                                                      <h6><a href="https://apkpure.com/insta-manipal/com.softsal.mipsuminsta" style="color: black"></a></h6><br>
+                                                                                      <h6><a href="https://github.com/rohandash06/SOUS-CHEF" style="color: black"><strong>View Project</strong></a></h6><br>
 									</div>
 								</div>
 							</div>
