--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 									</div>
 								</a></div>
                                 <div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
-									<a href="content_witing/content.html" target="_blank"><div class="services color-3">
+									<a href="content_writing/content.html" target="_blank"><div class="services color-3">
 										<span class="icon2"><i class="icon-pen"></i></span>
 										<h3>Academic Papers</h3>
                                         </div>
