--- a/content_writing/content.html
+++ b/content_writing/content.html
@@ -84,13 +84,13 @@
                                         <p>We report a study in which [nine] users were asked to evaluate our prototype app in terms of interaction with the system, usability, novelty, and overall liking. The interview questions were evaluated using qualitative and mixed methods data analysis.
 					   This work examines the potential for computational creativity in assisting in cooking. In particular, we present the outcome of our efforts to create an artificial chef that produces novel recipes with limited human assistance and assists in cooking as well.
 					</p>
-					<h2><a href="/SOUS_CHEF.pdf" style="color: black"><strong>View Paper</strong></a></h2><br>
+					<h2><a href="/content_writing/SOUS_CHEF.pdf" style="color: black">View Paper</a></h2><br>
 					<hr>
 					<p><strong>Risk Assessment from StakeHolders Perspective<br>in Small Scale Construction Projects</a></strong></p>
                                         <p><strong>Abstract</strong></p>
                                         <p>This report uses a systematic and holistic approach to identify risks and investigate the probability of occurrence and impact levels of these risks. The report aims to identify and analyse the risks related with the development of construction projects from the perspectives of project stakeholders. Questionnaire surveys were used to collect the facts and data. Based on a comprehensive valuation of the possibility of occurrence and their impact levels on the project objectives using Shen’s mathematical formula for finding significant risk factor, software such as IBM SPSS Statistical Data Editor and IBM Sample Power 3 for analysing the vast data collected, this report identifies several major risk factors.
 					</p>
-					<h2><a href="/UG_Project.pdf" style="color: black"><strong>View Paper</strong></a></h2><br>
+					<h2><a href="/content_writing/UG_Project.pdf" style="color: black">View Paper</a></h2><br>
 									</div>
 								</div>
 							</div>
