--- a/content_writing/content.html
+++ b/content_writing/content.html
@@ -61,7 +61,7 @@
 				<div class="author-img" style="background-image: url(images/PicsArt_03-06-08.16.36.png);"></div>
 				<h1 id="colorlib-logo"><a href="https://rohandash06.github.io">Rohan Das</a></h1>
 				<p><strong>Graduate Student at The University of North Carolina at Charlotte</strong></p><br>
-                        <p>Home</p>
+                        <p><a href="https://rohandash06.github.io/">Home</a></p>
              <div class="colorlib-footer">
                  <h3></h3>
                  <h3></h3>
