--- a/opensource/opensource.html
+++ b/opensource/opensource.html
@@ -77,7 +77,7 @@
 										<h2>Open Source Work</h2>
                                         <hr>
                                         <h4><strong>A NatGeo Storyboard</strong><br></h4>
-					<h4>Designed a Story board using Tableau of Nat Geo's Instagram account</h4>
+					<p>Designed a Story board using Tableau of Nat Geo's Instagram account</p>
 					<li>Visualized Key performance metrics like Engagement, Posts, Likes, Comments, Distribution of Followers</li>
 										<li>Designed the Front-end to represent the iconic NatGeo Magazine Cover</li><br>
 										
@@ -89,7 +89,7 @@
 						<hr><br>
 									
                                         <h4><strong>A Weather App</strong><br></h4>
-					<h4>Designed a Progressive Web Application</h4>
+					<p>Designed a Progressive Web Application</p>
 					<li>Used app shell method</li>
 					<li>The app works offline</li>
 					<li>The app stores data when online for later offline use</li><br>
