--- a/opensource/opensource.html
+++ b/opensource/opensource.html
@@ -74,7 +74,7 @@
 							<div class="row row-bottom-padded-sm animate-box" data-animate-effect="fadeInLeft">
 								<div class="col-md-12">
 									<div class="about-desc">
-										<h2>Open Source Work</h2>
+										<h2>Front End Designs</h2>
                                         <hr>
                                         <h4><strong>A NatGeo Storyboard</strong><br></h4>
 					<p>Designed a Story board using Tableau of Nat Geo's Instagram account</p>
@@ -90,9 +90,9 @@
 									
                                         <h4><strong>A Weather App</strong><br></h4>
 					<p>Designed a Progressive Web Application</p>
-					<li>Used app shell method</li>
-					<li>The app works offline</li>
-					<li>The app stores data when online for later offline use</li><br>
+					<li>Used app shell method.</li>
+					<li>The app works offline.</li>
+					<li>Used service workers to cache the forecast data</li><br>
 										
 					<img src="images/PWA.PNG"			
 					     style= "width: 807px;
