--- a/android-dev/android.html
+++ b/android-dev/android.html
@@ -77,7 +77,8 @@
 									<div class="about-desc">
 										<h2>Mobile App Development.</h2>
                                         <hr>
-                                        <h4><strong>Insta Manipal</strong><br><i>Manipal University (08/2012 – 03/2013)</i></br></h4>
+                                        <h4><strong>Insta Manipal</strong></h4>
+					<p><br>Manipal University (08/2012 – 03/2013)</br></p>
                                        <strong> <li>Developed an IOS and Android based App to desseminate information about University events and co-curricular activities, with 4 other team members.</li> <li>Single handedly implemented the UI Design.</li> <li>4000+ Downloads on the Play store.</li><br>
                                            <img src="images/website%20page.png">
                                            <img src="images/main%20activity.png">
@@ -85,8 +86,9 @@
                                            <h6><a href="https://apkpure.com/insta-manipal/com.softsal.mipsuminsta" style="color: black"><strong>View Project</strong></a></h6><br>
                                         
 					    <hr>
-                                                                                   <h4><strong>SOUS CHEF</strong><br><i>UNC Charlotte (08/2018 – 12/2018)</i></br></h4>
-                                                                                  <strong> <li>Developed a prototype co-creative mobile application to assist in cooking.</li> <li>Under took various needfinding steps.</li> <li>Created Personas and defined Use Cases.</li>
+                                                                                   <h4><strong>SOUS CHEF</strong></h4>
+									           <p><br>UNC Charlotte (08/2018 – 12/2018)</br></p>
+                                                                                  <li>Developed a prototype co-creative mobile application to assist in cooking.</li> <li>Under took various needfinding steps.</li> <li>Created Personas and defined Use Cases.</li>
                                                                                   	<li>Drew Sketches and Wireframes.</li> <li>Conducted User Studies.</li><br>
                                                                                       <img src="images/website%20page1.PNG"
 											   style= "width: 253px;
@@ -95,7 +97,7 @@
 											  style= "width: 253px;
 											   height: 543px;">
                                                                                    <br><br>
-                                                                                      <h6><a href="https://github.com/rohandash06/SOUS-CHEF" style="color: black"><strong>View Project</strong></a></h6><br>
+                                                                                      <h6><a href="https://github.com/rohandash06/SOUS-CHEF" style="color: black">View Project</a></h6><br>
 									</div>
 								</div>
 							</div>
