--- a/content_writing/content.html
+++ b/content_writing/content.html
@@ -79,7 +79,7 @@
 									<div class="about-desc">
 										<h2>Academic Papers</h2>
                                         <hr>
-                                        <h4><strong>SOUS: Co-Creative Cooking Application</a></strong></h4>
+                                        <h4><strong>SOUS: Co-Creative Cooking Application</strong> (Ongoing work) </h4>
                                         <p><strong>Abstract</strong></p>
                                         <p>We report a study in which thirteen users were asked to evaluate our prototype app in terms of interaction with the system, usability, novelty, and overall liking. The interview questions were evaluated using qualitative and mixed methods data analysis.
 					   This work examines the potential for computational creativity in assisting in cooking. In particular, we present the outcome of our efforts to create an artificial chef that produces novel recipes with limited human assistance and assists in cooking as well.
