--- a/opensource/opensource.html
+++ b/opensource/opensource.html
@@ -76,6 +76,21 @@
 									<div class="about-desc">
 										<h2>Front End Designs</h2>
                                         <hr>
+                                        <h4><strong>Interaction Design for Social Good in Charlotte</strong><i>(Ongoing)</i><br></h4>
+					<p>The objective is to use computing to achieve social good in Charlotte </p>
+					<p>Developing a design concept and high fidelity prototype for Interactive displays in Public Spaces</p>
+					<li>Defined Design and Usability goals and created Personas</li>					
+					<li>Undertook User reasearch and needfinding studies</li>
+					<li>Currently, developing Prototypes and Wireframes that connects the design goals to specific visual and interaction design alternatives. </li>
+					<br>
+										
+					<img src="images/Proto1.PNG"			
+					     style= "width: 350px;
+						height: 350px;">
+						<br><br>
+						<h6><a href="images/Storyboard.pdf" style="color: black"><strong>View Project</strong></a></h6><br>
+						<hr><br>
+										
                                         <h4><strong>A NatGeo Storyboard</strong><br></h4>
 					<p>Designed a Story board using Tableau of Nat Geo's Instagram account.</p>
 					<li>Visualized Key performance metrics like Engagement, Posts, Likes, Comments, Distribution of Followers.</li>
