--- a/android-dev/android.html
+++ b/android-dev/android.html
@@ -79,7 +79,7 @@
                                         <hr>
  							<h4><strong>SOUS CHEF</strong></h4>
 									           <p>UNC Charlotte (08/2018 – 12/2018)</p>
-                                                                                  <li>Developed a prototype co-creative mobile application to assist in cooking.</li> <li>Under took various needfinding steps.</li> <li>Created Personas and defined Use Cases.</li>
+                                                                                  <li>Developed prototypes of a co-creative mobile application to assist in cooking.</li> <li>Under took various needfinding steps.</li> <li>Created Personas and defined Use Cases.</li>
                                                                                   	<li>Drew Sketches and Wireframes.</li> <li>Conducted User Studies.</li><br>
                                                                                       <img src="images/website%20page1.PNG"
 											   style= "width: 253px;
