--- a/opensource/opensource.html
+++ b/opensource/opensource.html
@@ -76,7 +76,7 @@
 									<div class="about-desc">
 										<h2>Front End Designs</h2>
                                         <hr>
-                                        <h4><strong>Interaction Design for Social Good in Charlotte</strong><i>(Ongoing)</i><br></h4>
+                                        <h4><strong>Interaction Design for Social Good</strong><i>&nbsp;(Ongoing)</i><br></h4>
 					<p>The objective is to use computing to achieve social good in Charlotte <br>
 					Developing a design concept and high fidelity prototype for Interactive displays in Public Spaces</p>
 					<li>Defined Design and Usability goals and created Personas.</li>					
@@ -94,7 +94,7 @@
 						height: 350px;">
 								
 						<br><br>
-						<h6><a href="images/Storyboard.pdf" style="color: black"><strong>View Project</strong></a></h6><br>
+						<h6><a href="" style="color: black"><strong>View Project</strong></a></h6><br>
 						<hr><br>
 										
                                         <h4><strong>A NatGeo Storyboard</strong><br></h4>
