--- a/android-dev/android.html
+++ b/android-dev/android.html
@@ -84,6 +84,7 @@
                                                                                       <img src="images/website%20page1.PNG"
 											   style= "width: 253px;
 											   height: 543px;">
+										 &nbsp;
                                                                                       <img src="images/main%20activity1.PNG"
 											  style= "width: 253px;
 											   height: 543px;">
@@ -94,6 +95,7 @@
 					<p>Manipal University (08/2012 – 03/2013)</br></p>
                                        <li>Developed an IOS and Android based App to desseminate information about University events and co-curricular activities, with 4 other team members.</li> <li>Single handedly implemented the UI Design.</li> <li>4000+ Downloads on the Play store.</li><br>
                                            <img src="images/website%20page.png">
+					 &nbsp;
                                            <img src="images/main%20activity.png">
                                         <br><br>
                                            <h6><a href="https://apkpure.com/insta-manipal/com.softsal.mipsuminsta" style="color: black">View Project</a></h6><br>
