--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 									<a href="cp/cp.html" target="_blank"><div class="services color-1">
 										<span class="icon2"><i class="icon-bulb"></i></span>
-										<h3>Data<br>Analytics</h3>
+										<h3>Data<br>Analysis</h3>
 									</div>
 								</a></div>
  									<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
 									<a href="opensource/opensource.html" target="_blank"><div class="services color-1">
 										<span class="icon2"><i class="icon-world"></i></span>
-										<h3><br>Designing</h3>
+										<h3><br>Designs</h3>
 									</div>
 								</a></div>
 								<div class="col-md-3 animate-box" data-animate-effect="fadeInRight">
