--- a/android-dev/android.html
+++ b/android-dev/android.html
@@ -79,9 +79,15 @@
                                         <hr>
  							<h4><strong>SOUS CHEF</strong></h4>
 									           <p>UNC Charlotte (08/2018 – 12/2018)</p>
-                                                                                  <li>Developed prototypes of a co-creative mobile application to assist in cooking.</li> <li>Under took various needfinding steps.</li> <li>Created Personas and defined Use Cases.</li>
-                                                                                  	<li>Drew Sketches and Wireframes.</li> <li>Conducted User Studies.</li><br>
-                                                                                      <img src="images/website%20page1.PNG"
+                                                                                  <li>Developed prototypes of a co-creative mobile application to assist in cooking.</li> <li>Under took various User research & needfinding studies.</li> <li>Created Personas and defined Use Cases.</li>
+                                                                                  	<li>Created Sketches and Wireframes.</li> <li>Conducted User Studies.</li><br>
+                                  						
+										<img src="images/Sketches.PNG"
+											   style= "width: 350 px;
+											   height: 543px;">
+										&nbsp;
+										
+										<img src="images/website%20page1.PNG"
 											   style= "width: 253px;
 											   height: 543px;">
 										 &nbsp;
