--- a/android-dev/android.html
+++ b/android-dev/android.html
@@ -82,7 +82,7 @@
                                                                                   <li>Developed prototypes of a co-creative mobile application to assist in cooking.</li> <li>Under took various User research & needfinding studies.</li> <li>Created Personas and defined Use Cases.</li>
                                                                                   	<li>Created Sketches and Wireframes.</li> <li>Conducted User Studies.</li><br>
                                   						
-										<img src="images/Sketches.PNG"
+										<img src="images/Sketches.png"
 											   style= "width: 500 px;
 											   height: 450px;">
 										&nbsp;
