--- a/android-dev/android.html
+++ b/android-dev/android.html
@@ -85,12 +85,12 @@
 										<img src="images/Sketches.png"
 											   style= "width: 500 px;
 											   height: 450px;">
-										 &nbsp; <br>
+										&nbsp; <br></br>
 										
 										<img src="images/website%20page1.PNG"
 											   style= "width: 253px;
 											   height: 450px;">
-										
+										&nbsp; 
                                                                                       <img src="images/main%20activity1.PNG"
 											  style= "width: 253px;
 											   height: 450px;">
