--- a/opensource/opensource.html
+++ b/opensource/opensource.html
@@ -77,8 +77,8 @@
 										<h2>Front End Designs</h2>
                                         <hr>
                                         <h4><strong>Interaction Design for Social Good</strong><i>&nbsp;(Ongoing)</i><br></h4>
-					<p>The objective is to use computing to achieve social good in Charlotte <br>
-					Developing a design concept and high fidelity prototype for Interactive displays in Public Spaces</p>
+					<p>The objective is to use computing to achieve social good in Charlotte.<br>
+					Developing a design concept and high fidelity prototype for Interactive displays in Public Spaces.</p>
 					<li>Defined Design and Usability goals and created Personas.</li>					
 					<li>Undertook User reasearch and needfinding studies.</li>
 					<li>Currently, developing Prototypes and Wireframes that connects the design goals to specific visual and interaction design alternatives. </li>
