--- a/android-dev/android.html
+++ b/android-dev/android.html
@@ -95,7 +95,7 @@
 											  style= "width: 253px;
 											   height: 450px;">
                                                                                    <br><br>
-                                                                                      <h6><a href="https://github.com/rohandash06/SOUS-CHEF" style="color: black">View Project</a></h6><br>
+                                                                                      <h6><a href="https://github.com/rohandash06/SOUS-CHEF" style="color: black"><strong>View Project</strong></a></h6><br>
                                       <hr>
 							<h4><strong>Insta Manipal</strong></h4>
 					<p>Manipal University (08/2012 – 03/2013)</br></p>
@@ -104,7 +104,7 @@
 					 &nbsp;
                                            <img src="images/main%20activity.png">
                                         <br><br>
-                                           <h6><a href="https://apkpure.com/insta-manipal/com.softsal.mipsuminsta" style="color: black">View Project</a></h6><br>
+                                           <h6><a href="https://apkpure.com/insta-manipal/com.softsal.mipsuminsta" style="color: black"><strong>View Project</strong></a></h6><br>
                                         
 					    <hr>
                                                                                   
